--- a/SegmentedToday/SegmentedToday.entitlements
+++ b/SegmentedToday/SegmentedToday.entitlements
@@ -3,6 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.application-groups</key>
-	<array/>
+	<array>
+		<string>group.hu.jozsefvesza.appextensionsdemo</string>
+	</array>
 </dict>
 </plist>
